[package]
name = "pms7003-rs"
version = "0.1.3"
edition = "2024"

[dependencies]
derive_more = { version = "2.1.1", default-features = false, features = [
  "from",
] }
embedded-io = "0.7.1"
log = "0.4.29"
rp2040-hal = { version = "0.12.0", optional = true }
zerocopy = { version = "0.8.39", features = ["derive"] }

[features]
rp2040-impl = ["dep:rp2040-hal"]
